--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.6s cubic-bezier(0.4, 0.0, 0.2, 1); /* Smoother flip animation */
+  transition: transform 0.6s cubic-bezier(0.4, 0.0, 0.2, 1); /* helps in smooth transition or flip of cards */
   transform-style: preserve-3d;
   border-radius: 10px;
 }
@@ -50,7 +50,7 @@
 .game-card-back {
   background-color: #ecf0f1; 
   transform: rotateY(180deg);
-  border: 3px solid #2ecc71; /* Green border for matched cards or visual pop */
+  border: 3px solid #2ecc71; 
 }
 
 .game-card-back img {
@@ -60,11 +60,11 @@
   border-radius: 5px;
 }
 
-/* Styling for matched cards */
+/* Styling for matched cards and back of cards */
 .game-card.matched .game-card-back {
   background-color: #bdc3c7; 
  
 }
 .game-card.matched {
-    pointer-events: none; /* Disable clicking on matched cards */
+    pointer-events: none; /* Disables clicking on matched cards */
 }
